spikes/shapes/nightly-dependent-static-shapes/conformance/tests/ui/fail/rank_array_length.rs
use nightly_shape_api::StaticShape;

type Invalid = StaticShape<2, { [2, 3, 4] }>;

fn main() {
    let _ = std::mem::size_of::<Invalid>();
}
