spikes/shapes/nightly-dependent-static-shapes/conformance/tests/ui/fail/rank_array_length.stderr
error[E0308]: mismatched types
 --> tests/ui/fail/rank_array_length.rs:3:33
  |
3 | type Invalid = StaticShape<2, { [2, 3, 4] }>;
  |                                 ^^^^^^^^^ expected an array with a size of 2, found one with a size of 3
